# web-process-rt-demo

./: =5.0  =7.0  manage.py  pyproject.toml  requirements.txt
docker_exec/: apps.py  views.py
docs/: README.md  approach-a-ssh.md  approach-b-docker.md  approach-c-mq.md
mq_exec/: apps.py  views.py
rtstream/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ssh_exec/: apps.py  urls.py  views.py
templates/docker_exec/: index.html
templates/mq_exec/: index.html
templates/ssh_exec/: index.html
