[project]
name = "ssh-rt-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.3",
    "django>=6.0.4",
    "docker>=7.1.0",
    "paramiko>=4.0.0",
    "redis>=6.4.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
